# rustHackathon

./: .gitignore  Cargo.toml  build.sh  dev.sh  gemini.md  plan.md  project_history.md
backend/: Cargo.toml
backend/src/: api.rs  main.rs  state.rs  udp.rs
docker/: Dockerfile
frontend/: Cargo.toml  index.html  style.css
frontend/src/: app.rs  main.rs
frontend/src/components/: control_panel.rs  dashboard.rs  mod.rs  sensor_display.rs  system_status.rs
frontend/src/services/: websocket.rs
mock_realtime/: Cargo.toml
mock_realtime/src/: main.rs
shared/: Cargo.toml  build.rs
shared/proto/: operSystem_api_realtime.proto
shared/src/: lib.rs  models.rs
