[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlElement", "Node", "Window", "Document", "WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent", "console"] }
gloo-net = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
prost = "0.13"
futures = "0.3"
wasm-bindgen-futures = "0.4"



