[package]
name = "mock_realtime"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
prost = "0.13"
prost-types = "0.13"
chrono = "0.4"

[dependencies.shared]
path = "../shared"
